--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+
   <!-- CSS -->
   <link rel="stylesheet" href="./assets/css/brand.css">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -15,9 +19,9 @@
 </head>
 
 <body>
-  <header class="container-fluid d-flex justify-content-center align-items-center">
-    <div class="header-contents container col-9 d-flex">
-      <div class="header-branding col-6">
+  <header>
+    <div class="header-contents">
+      <div class="header-branding">
         <img src="./assets/images/err.png" width="70px" height="70px"/>
         <div class="branding-text">
           <h2>UNDEFINED</h2>
@@ -25,7 +29,7 @@
         </div>
       </div>
 
-      <nav class="col-6 d-flex justify-content-end align-items-center">
+      <nav>
         <img src="https://placehold.co/50" width="50px" height="50px"/>
         <img src="https://placehold.co/50" width="50px" height="50px"/>
         <img src="https://placehold.co/50" width="50px" height="50px"/>
@@ -34,7 +38,58 @@
   </header>
   
   <main>
-    
+      <h1>Homepage</h1>
+      
+      <!-- BLOG CARD -->
+      <div class="card-holder">
+        <div class="card-left">
+          <div class="title-container">
+            <h3 class="title">Why I still use Bootstrap in 2023</h3>
+          </div>
+          <div class="date-container">
+            <div>July 15, 2023</div>
+          </div>
+        </div>
+        <div class="card-right">
+          <h4>CSSDesigner_02</h4>
+        </div>
+      </div>
+
+      <!-- BLOG CARD -->
+      <div class="card-holder">
+        <div class="card-left">
+          <div class="title-container">
+            <h3 class="title">Why I still use Bootstrap in 2023</h3>
+          </div>
+          <div class="date-container">
+            <div>July 15, 2023</div>
+          </div>
+        </div>
+        <div class="card-right">
+          <h4>CSSDesigner_02</h4>
+        </div>
+      </div>
+
+      <!-- BLOG CARD -->
+      <div class="card-holder">
+        <div class="card-left">
+          <div class="title-container">
+            <h3 class="title">Why I still use Bootstrap in 2023</h3>
+          </div>
+          <div class="date-container">
+            <div>July 15, 2023</div>
+          </div>
+        </div>
+        <div class="card-right">
+          <h4>CSSDesigner_02</h4>
+        </div>
+      </div>
+
+
+
+
+
+    </div>
   </main>
 
   <footer>
@@ -42,10 +97,9 @@
   </footer>
 
 
-  <!-- Bootstrap and jQuery -->
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
   <!-- JS -->
   <script src="./assets/js/script.js"></script>  
