updated card examples

--- a/public/index.html
+++ b/public/index.html
@@ -59,14 +59,14 @@
       <div class="card-holder">
         <div class="card-left">
           <div class="title-container">
-            <h3 class="title">Why I still use Bootstrap in 2023</h3>
+            <h3 class="title">The most UNDERrated node.js packages</h3>
           </div>
           <div class="date-container">
-            <div>July 15, 2023</div>
+            <div>July 12, 2023</div>
           </div>
         </div>
         <div class="card-right">
-          <h4>CSSDesigner_02</h4>
+          <h4>LineBack(end)er</h4>
         </div>
       </div>
 
@@ -74,14 +74,14 @@
       <div class="card-holder">
         <div class="card-left">
           <div class="title-container">
-            <h3 class="title">Why I still use Bootstrap in 2023</h3>
+            <h3 class="title">Responsive layouts, responsive servers, and responsive forms: get better responses</h3>
           </div>
           <div class="date-container">
-            <div>July 15, 2023</div>
+            <div>July 11, 2023</div>
           </div>
         </div>
         <div class="card-right">
-          <h4>CSSDesigner_02</h4>
+          <h4>IknowaLOT</h4>
         </div>
       </div>
 
